fix(combo): parent overflow hidden issues Closes #781
When the combo is placed in a parent with `overflow: hidden` set to it,
the drop-down list of options gets cut off.

--- a/src/components/combo/themes/light/combo.base.scss
+++ b/src/components/combo/themes/light/combo.base.scss
@@ -5,7 +5,12 @@
     --component-size: var(--ig-size, var(--ig-size-medium));
 
     display: block;
+    position: static;
     font-family: var(--ig-font-family);
+
+    > igc-input {
+        position: relative;
+    }
 
     > igc-input::part(input) {
         text-overflow: ellipsis;
